--- a/ProjetoMavenJSFPrimeFaces/src/main/webapp/pages/comuns/menuLateral.xhtml
+++ b/ProjetoMavenJSFPrimeFaces/src/main/webapp/pages/comuns/menuLateral.xhtml
@@ -18,6 +18,10 @@
 			<p:submenu label="#{msg['pages.comuns.menuLateral.options']}">
 				<p:menuitem value="#{msg['pages.linguagem.menu']}" url="linguagem.xhtml" />
 	       </p:submenu>
+	       
+	       <p:submenu label="#{msg['pages.comuns.menuLateral.aluno']}">
+	       		
+	       </p:submenu>
 		
 		</p:panelMenu>
 	</h:form>
